<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>bimini</name>
  <version>0.1.0</version>
  <description>A BIM package that can be built within ROS or standalone</description>
  <maintainer email="maxdiekel@gmail.com">Your Name</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <!-- Add other ROS dependencies -->

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>